NTI-7163 fix nav bar from overlapping long question
allow question to go above assignments bar when editing

update inline dialog utils

revert to previous logic

--- a/src/editor/Editor.scss
+++ b/src/editor/Editor.scss
@@ -4,7 +4,7 @@
 	background: white;
 
 	.sticky {
-		z-index: 10;
+		z-index: 1;
 	}
 
 	.panels-message-bar {
